# bel-selventa

./: .bumpversion.cfg  .gitignore  .travis.yml  README.md  README.rst  setup.cfg  tox.ini
.github/workflows/: tests.yml
selventa_knowledge/: __init__.py  large_corpus-20170611.bel.summary.json  large_corpus-20170611.bel.warnings.tsv  large_corpus.bel.summary.json  large_corpus.bel.warnings.tsv  selventa-small-corpus-20150611.bel  selventa-small-corpus-20150611.bel.pickle  selventa-small-corpus-20150611.bel.summary.json  selventa-small-corpus-20150611.bel.warnings.tsv  small_corpus.bel.pickle  small_corpus.bel.summary.json  small_corpus.bel.warnings.tsv
