##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = selventa_knowledge
version = 1.1.2-dev
description = Selventa Large and Small Corpora via PyBEL
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/cthoyt/selventa-knowledge
download_url = https://github.com/cthoyt/selventa-knowledge/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/selventa-knowledge/issues
    Source Code = https://github.com/cthoyt/selventa-knowledge

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems biology
    Networks biology
    Drug repositioning

[options]
install_requires =
    pybel

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = selventa_knowledge

[options.entry_points]
console_scripts =
    selventa-knowledge = selventa_knowledge:main
